# SCLEII_onlyOneLIbAddSeprt

./: README.md
SCLEII_onlyOneLIbAddSeprt/: CMakeLists.txt
SCLEII_onlyOneLIbAddSeprt/build-external_app_test_folder-vc15-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  mymathApp.ilk
SCLEII_onlyOneLIbAddSeprt/build-external_app_test_folder-vc15-Debug/.cmake/api/v1/reply/: cache-v2-d4c88de676c7834f74dd.json  cmakeFiles-v1-d5b1512b80dd3bfa3d07.json  codemodel-v2-bbfab5f88015b53cfc74.json  index-2022-10-11T08-02-46-0248.json  target-mymathApp-Debug-903cc8a4b02137ab45d6.json
SCLEII_onlyOneLIbAddSeprt/build-external_app_test_folder-vc15-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-7206a3fa246316b1acf4.json  index-2022-10-11T08-00-48-0657.json  target-mymathApp-Debug-1160f5b4fdb69e42bb26.json
SCLEII_onlyOneLIbAddSeprt/build-external_app_test_folder-vc15-Debug/.qtc_clangd/: compile_commands.json
SCLEII_onlyOneLIbAddSeprt/build-external_app_test_folder-vc15-Debug/.qtc_clangd/.cache/clangd/index/: ConcurrencySal.h.A74C297F6E725EE9.idx  __stddef_max_align_t.h.4433434EBFB4BD76.idx  adxintrin.h.91A44CF5C4FA3E93.idx  bmiintrin.h.03BDD8773C9BFFAB.idx  (+84 more)
SCLEII_onlyOneLIbAddSeprt/mymath/: CMakeLists.txt
SCLEII_onlyOneLIbAddSeprt/mymath/include/: mymath.h
SCLEII_onlyOneLIbAddSeprt/mymathApp/: CMakeLists.txt
SCLEII_onlyOneLIbAddSeprt_19.0.24215.1_install/lib/: mymathd.lib
SCLEII_onlyOneLIbAddSeprt_19.0.24215.1_install/lib/cmake/mymath/: MyMathTargets-debug.cmake  MyMathTargets.cmake
external_app_test_folder/: CMakeLists.txt
